// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data with comparison returns the right data for current and previous periods 5`] = `
Object {
  "currentPeriod": Object {
    "31651f3c624b81c55dd4633df0b5b9f9ab06b151121b0404ae796632cd1f87ad": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627974300000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974360000,
          "y": 0.001,
        },
        Object {
          "x": 1627974420000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974480000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974540000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974600000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974660000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974720000,
          "y": 0.002,
        },
        Object {
          "x": 1627974780000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974840000,
          "y": 0.002,
        },
        Object {
          "x": 1627974900000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974960000,
          "y": 0.001,
        },
        Object {
          "x": 1627975020000,
          "y": 0.002,
        },
        Object {
          "x": 1627975080000,
          "y": 0.002,
        },
        Object {
          "x": 1627975140000,
          "y": 0.0025,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627974300000,
          "y": 0,
        },
        Object {
          "x": 1627974360000,
          "y": null,
        },
        Object {
          "x": 1627974420000,
          "y": 0,
        },
        Object {
          "x": 1627974480000,
          "y": 0,
        },
        Object {
          "x": 1627974540000,
          "y": 0,
        },
        Object {
          "x": 1627974600000,
          "y": 0.125,
        },
        Object {
          "x": 1627974660000,
          "y": 0.6,
        },
        Object {
          "x": 1627974720000,
          "y": 0.2,
        },
        Object {
          "x": 1627974780000,
          "y": 0,
        },
        Object {
          "x": 1627974840000,
          "y": 0,
        },
        Object {
          "x": 1627974900000,
          "y": 0.0666666666666667,
        },
        Object {
          "x": 1627974960000,
          "y": 0,
        },
        Object {
          "x": 1627975020000,
          "y": 0,
        },
        Object {
          "x": 1627975080000,
          "y": 0,
        },
        Object {
          "x": 1627975140000,
          "y": 0.181818181818182,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627974300000,
          "y": 34887.8888888889,
        },
        Object {
          "x": 1627974360000,
          "y": null,
        },
        Object {
          "x": 1627974420000,
          "y": 4983,
        },
        Object {
          "x": 1627974480000,
          "y": 41285.4,
        },
        Object {
          "x": 1627974540000,
          "y": 13820.3333333333,
        },
        Object {
          "x": 1627974600000,
          "y": 13782,
        },
        Object {
          "x": 1627974660000,
          "y": 13392.6,
        },
        Object {
          "x": 1627974720000,
          "y": 6991,
        },
        Object {
          "x": 1627974780000,
          "y": 6885.85714285714,
        },
        Object {
          "x": 1627974840000,
          "y": 7935,
        },
        Object {
          "x": 1627974900000,
          "y": 10828.3333333333,
        },
        Object {
          "x": 1627974960000,
          "y": 6079,
        },
        Object {
          "x": 1627975020000,
          "y": 5217,
        },
        Object {
          "x": 1627975080000,
          "y": 8477.76923076923,
        },
        Object {
          "x": 1627975140000,
          "y": 5937.18181818182,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627974300000,
          "y": 0.786640167236328,
        },
        Object {
          "x": 1627974360000,
          "y": 0.786666870117188,
        },
        Object {
          "x": 1627974420000,
          "y": 0.786960601806641,
        },
        Object {
          "x": 1627974480000,
          "y": 0.787132263183594,
        },
        Object {
          "x": 1627974540000,
          "y": 0.787441253662109,
        },
        Object {
          "x": 1627974600000,
          "y": 0.787555694580078,
        },
        Object {
          "x": 1627974660000,
          "y": 0.788524627685547,
        },
        Object {
          "x": 1627974720000,
          "y": 0.788822174072266,
        },
        Object {
          "x": 1627974780000,
          "y": 0.789054870605469,
        },
        Object {
          "x": 1627974840000,
          "y": 0.78936767578125,
        },
        Object {
          "x": 1627974900000,
          "y": 0.789985656738281,
        },
        Object {
          "x": 1627974960000,
          "y": 0.790130615234375,
        },
        Object {
          "x": 1627975020000,
          "y": 0.790508270263672,
        },
        Object {
          "x": 1627975080000,
          "y": 0.791069030761719,
        },
        Object {
          "x": 1627975140000,
          "y": 0.791587829589844,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "serviceNodeName": "31651f3c624b81c55dd4633df0b5b9f9ab06b151121b0404ae796632cd1f87ad",
      "throughput": Array [
        Object {
          "x": 1627974300000,
          "y": 9,
        },
        Object {
          "x": 1627974360000,
          "y": 0,
        },
        Object {
          "x": 1627974420000,
          "y": 4,
        },
        Object {
          "x": 1627974480000,
          "y": 5,
        },
        Object {
          "x": 1627974540000,
          "y": 6,
        },
        Object {
          "x": 1627974600000,
          "y": 8,
        },
        Object {
          "x": 1627974660000,
          "y": 5,
        },
        Object {
          "x": 1627974720000,
          "y": 5,
        },
        Object {
          "x": 1627974780000,
          "y": 7,
        },
        Object {
          "x": 1627974840000,
          "y": 2,
        },
        Object {
          "x": 1627974900000,
          "y": 15,
        },
        Object {
          "x": 1627974960000,
          "y": 3,
        },
        Object {
          "x": 1627975020000,
          "y": 8,
        },
        Object {
          "x": 1627975080000,
          "y": 13,
        },
        Object {
          "x": 1627975140000,
          "y": 11,
        },
        Object {
          "x": 1627975200000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {
    "31651f3c624b81c55dd4633df0b5b9f9ab06b151121b0404ae796632cd1f87ad": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627974300000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974360000,
          "y": 0.002,
        },
        Object {
          "x": 1627974420000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974480000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974540000,
          "y": 0.002,
        },
        Object {
          "x": 1627974600000,
          "y": 0.002,
        },
        Object {
          "x": 1627974660000,
          "y": 0.002,
        },
        Object {
          "x": 1627974720000,
          "y": 0.002,
        },
        Object {
          "x": 1627974780000,
          "y": 0.002,
        },
        Object {
          "x": 1627974840000,
          "y": 0.0045,
        },
        Object {
          "x": 1627974900000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974960000,
          "y": 0.0025,
        },
        Object {
          "x": 1627975020000,
          "y": 0.002,
        },
        Object {
          "x": 1627975080000,
          "y": 0.002,
        },
        Object {
          "x": 1627975140000,
          "y": 0.0025,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627974300000,
          "y": 0,
        },
        Object {
          "x": 1627974360000,
          "y": 0,
        },
        Object {
          "x": 1627974420000,
          "y": 0.333333333333333,
        },
        Object {
          "x": 1627974480000,
          "y": 0.181818181818182,
        },
        Object {
          "x": 1627974540000,
          "y": 0,
        },
        Object {
          "x": 1627974600000,
          "y": 0,
        },
        Object {
          "x": 1627974660000,
          "y": 0.166666666666667,
        },
        Object {
          "x": 1627974720000,
          "y": 0.181818181818182,
        },
        Object {
          "x": 1627974780000,
          "y": 0,
        },
        Object {
          "x": 1627974840000,
          "y": 0,
        },
        Object {
          "x": 1627974900000,
          "y": 0.0833333333333333,
        },
        Object {
          "x": 1627974960000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1627975020000,
          "y": 0,
        },
        Object {
          "x": 1627975080000,
          "y": 0.1,
        },
        Object {
          "x": 1627975140000,
          "y": 0.153846153846154,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627974300000,
          "y": 11839,
        },
        Object {
          "x": 1627974360000,
          "y": 7407,
        },
        Object {
          "x": 1627974420000,
          "y": 1925569.66666667,
        },
        Object {
          "x": 1627974480000,
          "y": 9017.18181818182,
        },
        Object {
          "x": 1627974540000,
          "y": 63575,
        },
        Object {
          "x": 1627974600000,
          "y": 7577.66666666667,
        },
        Object {
          "x": 1627974660000,
          "y": 6844.33333333333,
        },
        Object {
          "x": 1627974720000,
          "y": 503471,
        },
        Object {
          "x": 1627974780000,
          "y": 6247.8,
        },
        Object {
          "x": 1627974840000,
          "y": 1137247,
        },
        Object {
          "x": 1627974900000,
          "y": 27951.6666666667,
        },
        Object {
          "x": 1627974960000,
          "y": 10248.8461538462,
        },
        Object {
          "x": 1627975020000,
          "y": 13529,
        },
        Object {
          "x": 1627975080000,
          "y": 6691247.8,
        },
        Object {
          "x": 1627975140000,
          "y": 12098.6923076923,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627974300000,
          "y": 0.780715942382813,
        },
        Object {
          "x": 1627974360000,
          "y": 0.780921936035156,
        },
        Object {
          "x": 1627974420000,
          "y": 0.781166076660156,
        },
        Object {
          "x": 1627974480000,
          "y": 0.781524658203125,
        },
        Object {
          "x": 1627974540000,
          "y": 0.781723022460938,
        },
        Object {
          "x": 1627974600000,
          "y": 0.782463073730469,
        },
        Object {
          "x": 1627974660000,
          "y": 0.782634735107422,
        },
        Object {
          "x": 1627974720000,
          "y": 0.782939910888672,
        },
        Object {
          "x": 1627974780000,
          "y": 0.783458709716797,
        },
        Object {
          "x": 1627974840000,
          "y": 0.783935546875,
        },
        Object {
          "x": 1627974900000,
          "y": 0.784690856933594,
        },
        Object {
          "x": 1627974960000,
          "y": 0.785182952880859,
        },
        Object {
          "x": 1627975020000,
          "y": 0.785446166992188,
        },
        Object {
          "x": 1627975080000,
          "y": 0.786224365234375,
        },
        Object {
          "x": 1627975140000,
          "y": 0.786415100097656,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "serviceNodeName": "31651f3c624b81c55dd4633df0b5b9f9ab06b151121b0404ae796632cd1f87ad",
      "throughput": Array [
        Object {
          "x": 1627974300000,
          "y": 4,
        },
        Object {
          "x": 1627974360000,
          "y": 2,
        },
        Object {
          "x": 1627974420000,
          "y": 3,
        },
        Object {
          "x": 1627974480000,
          "y": 11,
        },
        Object {
          "x": 1627974540000,
          "y": 4,
        },
        Object {
          "x": 1627974600000,
          "y": 6,
        },
        Object {
          "x": 1627974660000,
          "y": 6,
        },
        Object {
          "x": 1627974720000,
          "y": 11,
        },
        Object {
          "x": 1627974780000,
          "y": 10,
        },
        Object {
          "x": 1627974840000,
          "y": 10,
        },
        Object {
          "x": 1627974900000,
          "y": 12,
        },
        Object {
          "x": 1627974960000,
          "y": 13,
        },
        Object {
          "x": 1627975020000,
          "y": 8,
        },
        Object {
          "x": 1627975080000,
          "y": 10,
        },
        Object {
          "x": 1627975140000,
          "y": 13,
        },
        Object {
          "x": 1627975200000,
          "y": 0,
        },
      ],
    },
  },
}
`;

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data without comparison returns the right data 3`] = `
Object {
  "currentPeriod": Object {
    "31651f3c624b81c55dd4633df0b5b9f9ab06b151121b0404ae796632cd1f87ad": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627973400000,
          "y": 0.0015,
        },
        Object {
          "x": 1627973460000,
          "y": 0.002,
        },
        Object {
          "x": 1627973520000,
          "y": 0.0025,
        },
        Object {
          "x": 1627973580000,
          "y": 0.0015,
        },
        Object {
          "x": 1627973640000,
          "y": 0.002,
        },
        Object {
          "x": 1627973700000,
          "y": 0.002,
        },
        Object {
          "x": 1627973760000,
          "y": 0.002,
        },
        Object {
          "x": 1627973820000,
          "y": 0.002,
        },
        Object {
          "x": 1627973880000,
          "y": 0.002,
        },
        Object {
          "x": 1627973940000,
          "y": 0.0045,
        },
        Object {
          "x": 1627974000000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974060000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974120000,
          "y": 0.002,
        },
        Object {
          "x": 1627974180000,
          "y": 0.002,
        },
        Object {
          "x": 1627974240000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974300000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974360000,
          "y": 0.001,
        },
        Object {
          "x": 1627974420000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974480000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974540000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974600000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974660000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974720000,
          "y": 0.002,
        },
        Object {
          "x": 1627974780000,
          "y": 0.0015,
        },
        Object {
          "x": 1627974840000,
          "y": 0.002,
        },
        Object {
          "x": 1627974900000,
          "y": 0.0025,
        },
        Object {
          "x": 1627974960000,
          "y": 0.001,
        },
        Object {
          "x": 1627975020000,
          "y": 0.002,
        },
        Object {
          "x": 1627975080000,
          "y": 0.002,
        },
        Object {
          "x": 1627975140000,
          "y": 0.0025,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627973400000,
          "y": 0,
        },
        Object {
          "x": 1627973460000,
          "y": 0,
        },
        Object {
          "x": 1627973520000,
          "y": 0.333333333333333,
        },
        Object {
          "x": 1627973580000,
          "y": 0.181818181818182,
        },
        Object {
          "x": 1627973640000,
          "y": 0,
        },
        Object {
          "x": 1627973700000,
          "y": 0,
        },
        Object {
          "x": 1627973760000,
          "y": 0.166666666666667,
        },
        Object {
          "x": 1627973820000,
          "y": 0.181818181818182,
        },
        Object {
          "x": 1627973880000,
          "y": 0,
        },
        Object {
          "x": 1627973940000,
          "y": 0,
        },
        Object {
          "x": 1627974000000,
          "y": 0.0833333333333333,
        },
        Object {
          "x": 1627974060000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1627974120000,
          "y": 0,
        },
        Object {
          "x": 1627974180000,
          "y": 0.1,
        },
        Object {
          "x": 1627974240000,
          "y": 0.153846153846154,
        },
        Object {
          "x": 1627974300000,
          "y": 0,
        },
        Object {
          "x": 1627974360000,
          "y": null,
        },
        Object {
          "x": 1627974420000,
          "y": 0,
        },
        Object {
          "x": 1627974480000,
          "y": 0,
        },
        Object {
          "x": 1627974540000,
          "y": 0,
        },
        Object {
          "x": 1627974600000,
          "y": 0.125,
        },
        Object {
          "x": 1627974660000,
          "y": 0.6,
        },
        Object {
          "x": 1627974720000,
          "y": 0.2,
        },
        Object {
          "x": 1627974780000,
          "y": 0,
        },
        Object {
          "x": 1627974840000,
          "y": 0,
        },
        Object {
          "x": 1627974900000,
          "y": 0.0666666666666667,
        },
        Object {
          "x": 1627974960000,
          "y": 0,
        },
        Object {
          "x": 1627975020000,
          "y": 0,
        },
        Object {
          "x": 1627975080000,
          "y": 0,
        },
        Object {
          "x": 1627975140000,
          "y": 0.181818181818182,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627973400000,
          "y": 11839,
        },
        Object {
          "x": 1627973460000,
          "y": 7407,
        },
        Object {
          "x": 1627973520000,
          "y": 1925569.66666667,
        },
        Object {
          "x": 1627973580000,
          "y": 9017.18181818182,
        },
        Object {
          "x": 1627973640000,
          "y": 63575,
        },
        Object {
          "x": 1627973700000,
          "y": 7577.66666666667,
        },
        Object {
          "x": 1627973760000,
          "y": 6844.33333333333,
        },
        Object {
          "x": 1627973820000,
          "y": 503471,
        },
        Object {
          "x": 1627973880000,
          "y": 6247.8,
        },
        Object {
          "x": 1627973940000,
          "y": 1137247,
        },
        Object {
          "x": 1627974000000,
          "y": 27951.6666666667,
        },
        Object {
          "x": 1627974060000,
          "y": 10248.8461538462,
        },
        Object {
          "x": 1627974120000,
          "y": 13529,
        },
        Object {
          "x": 1627974180000,
          "y": 6691247.8,
        },
        Object {
          "x": 1627974240000,
          "y": 12098.6923076923,
        },
        Object {
          "x": 1627974300000,
          "y": 34887.8888888889,
        },
        Object {
          "x": 1627974360000,
          "y": null,
        },
        Object {
          "x": 1627974420000,
          "y": 4983,
        },
        Object {
          "x": 1627974480000,
          "y": 41285.4,
        },
        Object {
          "x": 1627974540000,
          "y": 13820.3333333333,
        },
        Object {
          "x": 1627974600000,
          "y": 13782,
        },
        Object {
          "x": 1627974660000,
          "y": 13392.6,
        },
        Object {
          "x": 1627974720000,
          "y": 6991,
        },
        Object {
          "x": 1627974780000,
          "y": 6885.85714285714,
        },
        Object {
          "x": 1627974840000,
          "y": 7935,
        },
        Object {
          "x": 1627974900000,
          "y": 10828.3333333333,
        },
        Object {
          "x": 1627974960000,
          "y": 6079,
        },
        Object {
          "x": 1627975020000,
          "y": 5217,
        },
        Object {
          "x": 1627975080000,
          "y": 8477.76923076923,
        },
        Object {
          "x": 1627975140000,
          "y": 5937.18181818182,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627973400000,
          "y": 0.780715942382813,
        },
        Object {
          "x": 1627973460000,
          "y": 0.780921936035156,
        },
        Object {
          "x": 1627973520000,
          "y": 0.781166076660156,
        },
        Object {
          "x": 1627973580000,
          "y": 0.781524658203125,
        },
        Object {
          "x": 1627973640000,
          "y": 0.781723022460938,
        },
        Object {
          "x": 1627973700000,
          "y": 0.782463073730469,
        },
        Object {
          "x": 1627973760000,
          "y": 0.782634735107422,
        },
        Object {
          "x": 1627973820000,
          "y": 0.782939910888672,
        },
        Object {
          "x": 1627973880000,
          "y": 0.783458709716797,
        },
        Object {
          "x": 1627973940000,
          "y": 0.783935546875,
        },
        Object {
          "x": 1627974000000,
          "y": 0.784690856933594,
        },
        Object {
          "x": 1627974060000,
          "y": 0.785182952880859,
        },
        Object {
          "x": 1627974120000,
          "y": 0.785446166992188,
        },
        Object {
          "x": 1627974180000,
          "y": 0.786224365234375,
        },
        Object {
          "x": 1627974240000,
          "y": 0.786415100097656,
        },
        Object {
          "x": 1627974300000,
          "y": 0.786640167236328,
        },
        Object {
          "x": 1627974360000,
          "y": 0.786666870117188,
        },
        Object {
          "x": 1627974420000,
          "y": 0.786960601806641,
        },
        Object {
          "x": 1627974480000,
          "y": 0.787132263183594,
        },
        Object {
          "x": 1627974540000,
          "y": 0.787441253662109,
        },
        Object {
          "x": 1627974600000,
          "y": 0.787555694580078,
        },
        Object {
          "x": 1627974660000,
          "y": 0.788524627685547,
        },
        Object {
          "x": 1627974720000,
          "y": 0.788822174072266,
        },
        Object {
          "x": 1627974780000,
          "y": 0.789054870605469,
        },
        Object {
          "x": 1627974840000,
          "y": 0.78936767578125,
        },
        Object {
          "x": 1627974900000,
          "y": 0.789985656738281,
        },
        Object {
          "x": 1627974960000,
          "y": 0.790130615234375,
        },
        Object {
          "x": 1627975020000,
          "y": 0.790508270263672,
        },
        Object {
          "x": 1627975080000,
          "y": 0.791069030761719,
        },
        Object {
          "x": 1627975140000,
          "y": 0.791587829589844,
        },
        Object {
          "x": 1627975200000,
          "y": null,
        },
      ],
      "serviceNodeName": "31651f3c624b81c55dd4633df0b5b9f9ab06b151121b0404ae796632cd1f87ad",
      "throughput": Array [
        Object {
          "x": 1627973400000,
          "y": 4,
        },
        Object {
          "x": 1627973460000,
          "y": 2,
        },
        Object {
          "x": 1627973520000,
          "y": 3,
        },
        Object {
          "x": 1627973580000,
          "y": 11,
        },
        Object {
          "x": 1627973640000,
          "y": 4,
        },
        Object {
          "x": 1627973700000,
          "y": 6,
        },
        Object {
          "x": 1627973760000,
          "y": 6,
        },
        Object {
          "x": 1627973820000,
          "y": 11,
        },
        Object {
          "x": 1627973880000,
          "y": 10,
        },
        Object {
          "x": 1627973940000,
          "y": 10,
        },
        Object {
          "x": 1627974000000,
          "y": 12,
        },
        Object {
          "x": 1627974060000,
          "y": 13,
        },
        Object {
          "x": 1627974120000,
          "y": 8,
        },
        Object {
          "x": 1627974180000,
          "y": 10,
        },
        Object {
          "x": 1627974240000,
          "y": 13,
        },
        Object {
          "x": 1627974300000,
          "y": 9,
        },
        Object {
          "x": 1627974360000,
          "y": 0,
        },
        Object {
          "x": 1627974420000,
          "y": 4,
        },
        Object {
          "x": 1627974480000,
          "y": 5,
        },
        Object {
          "x": 1627974540000,
          "y": 6,
        },
        Object {
          "x": 1627974600000,
          "y": 8,
        },
        Object {
          "x": 1627974660000,
          "y": 5,
        },
        Object {
          "x": 1627974720000,
          "y": 5,
        },
        Object {
          "x": 1627974780000,
          "y": 7,
        },
        Object {
          "x": 1627974840000,
          "y": 2,
        },
        Object {
          "x": 1627974900000,
          "y": 15,
        },
        Object {
          "x": 1627974960000,
          "y": 3,
        },
        Object {
          "x": 1627975020000,
          "y": 8,
        },
        Object {
          "x": 1627975080000,
          "y": 13,
        },
        Object {
          "x": 1627975140000,
          "y": 11,
        },
        Object {
          "x": 1627975200000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {},
}
`;
